Kevin & Darrren: Story 3: Create full login screen and added routing to and from. Updated some code to fit standards

--- a/CSC3045-CS2-Frontend/CSC3045-CS2/Pages/Login.xaml
+++ b/CSC3045-CS2-Frontend/CSC3045-CS2/Pages/Login.xaml
@@ -9,7 +9,6 @@
       Title="Login">
 
     <StackPanel>
-        
         <TextBlock Text="{Binding LoginTitle, FallbackValue='Login'}" HorizontalAlignment="Center" Margin="0,10,0,25"/>
 
         <Grid>
@@ -24,9 +23,15 @@
             </StackPanel>
 
             <StackPanel Grid.Column="1" Margin="12,0,25,0">
-                <TextBox MaxLength="25" Margin="0,0,0,15"/>
-                <PasswordBox MaxLength="25"/>
+                <TextBox Text="{Binding UsernameTextContent}"  MaxLength="25" MaxWidth="125" MinWidth="125" HorizontalAlignment="Left" Margin="0,0,0,15"/>
+                <PasswordBox Name="PasswordBox" MaxLength="25" MaxWidth="125" MinWidth="125" HorizontalAlignment="Left"/>
             </StackPanel>
         </Grid>
+
+        <StackPanel Margin="0,20,0,20">
+            <Button Content="{Binding LoginButtonText, FallbackValue='Login'}" HorizontalAlignment="Center" Margin="0,0,0,15" Command="{Binding LoginCommand}"/>
+            <Button Content="{Binding RegisterButtonText, FallbackValue='Register'}" HorizontalAlignment="Center" Margin="0,0,0,0" Command="{Binding NavigateToRegistrationCommand}"/>
+        </StackPanel>
+        
     </StackPanel>
 </Page>
