Zoey:Story4:Merged Master into This Branch and poninted Login to Project Dashboard

--- a/CSC3045-CS2-Frontend/CSC3045-CS2/Pages/ProjectDashboard.xaml
+++ b/CSC3045-CS2-Frontend/CSC3045-CS2/Pages/ProjectDashboard.xaml
@@ -9,13 +9,13 @@
       Title="ProjectDashboard" Height="100" Width="100">
 
 
-    <StackPanel>
+    <StackPanel Margin="0,0,-8,0">
         <TextBlock Text="{Binding WelcomeProductManagerLabel, FallbackValue='Welcome!'}" HorizontalAlignment="Center" Margin="0,20,0,25" />
-
+        <TextBlock Text="{Binding ProductManagerLabel, FallbackValue='blank'}" HorizontalAlignment="Center" Margin="0,-20,0,0" />
         <Grid>
 
             <StackPanel Margin="0,20,0,20">
-                <Button Content="{Binding CreateProjectButtonLabel, FallbackValue=Create Project}" HorizontalAlignment="Center" Margin="8,-20,6,20" Command="{Binding NavigateToCreateProjectCommand}"/>
+                <Button Content="{Binding CreateProjectButtonLabel, FallbackValue='Create Project'}" HorizontalAlignment="Center" Margin="8,-20,6,20" Command="{Binding NavigateToCreateProjectCommand}"/>
             </StackPanel>
         </Grid>
     </StackPanel>
