--- a/CSC3045-CS2-Frontend/CSC3045-CS2/Pages/CreateProject.xaml
+++ b/CSC3045-CS2-Frontend/CSC3045-CS2/Pages/CreateProject.xaml
@@ -22,11 +22,10 @@
                 <TextBlock Text="{Binding ProjectManagerLabel, FallbackValue='Project Manager:'}" HorizontalAlignment="Right" Margin="0,0,0,15"/>
                 <TextBlock Text="{Binding ProjectNameLabel, FallbackValue=Project Name:}" HorizontalAlignment="Right" Margin="0,0,-1,15" Width="91"/>
                 <TextBlock Text="{Binding DescriptionLabel, FallbackValue=Description:}" HorizontalAlignment="Right" Width="90"/>
-                <TextBlock Text="{Binding ProductOwnerLabel, FallbackValue=Product Owner:}" HorizontalAlignment="Right" Margin="0,65,9,0" />
             </StackPanel>
 
             <StackPanel Grid.Column="1" Margin="12,0,25,0">
-                <TextBlock Text="{Binding ProjectManagerNameLabel, FallbackValue='blank'}" HorizontalAlignment="Right" Margin="0,0,0,15" Width="113"/>
+                <TextBlock Text="{Binding ProjectManagerNameLabel, FallbackValue='blank'}" HorizontalAlignment="Left" Margin="0,0,0,15" />
                 <TextBox Text="{Binding ProjectNameTextContent}"  MaxLength="25" MaxWidth="125" MinWidth="125" HorizontalAlignment="Left" Margin="0,1,0,15"/>
                 <TextBox Text="{Binding DescriptionTextContent}"  MaxLength="25" MaxWidth="125" MinWidth="125" HorizontalAlignment="Left" Margin="0,0,0,15"  Height="66" Width="113"/>
             </StackPanel>
