Ciaran & Conor: Added search users UI, and add team members UI

--- a/CSC3045-CS2-Frontend/CSC3045-CS2/Pages/ProjectDashboard.xaml
+++ b/CSC3045-CS2-Frontend/CSC3045-CS2/Pages/ProjectDashboard.xaml
@@ -37,6 +37,8 @@
 
             <Button Grid.Column="0" Content="{Binding UserDashboardButtonLabel, FallbackValue='User Dashboard'}" Command="{Binding GoToUserDashboardCommand}"/>
 
+            <Button Grid.Column="1" Content="{Binding AddTeamMemberButtonLabel, FallbackValue='Add Members'}" Command="{Binding GoToAddTeamMemberCommand}"/>
+
             <Button Grid.Column="2" Content="{Binding ProductBacklogButtonLabel, FallbackValue='Product Backlog'}" Command="{Binding GoToProductBacklogCommand}"/>
         </Grid>
 
