--- a/CSC3045-CS2-Frontend/CSC3045-CS2/Pages/Login.xaml
+++ b/CSC3045-CS2-Frontend/CSC3045-CS2/Pages/Login.xaml
@@ -18,8 +18,8 @@
             </Grid.ColumnDefinitions>
 
             <StackPanel Grid.Column="0" Margin="0,0,12,0">
-                <TextBlock Text="{Binding LoginUsernameLabel, FallbackValue='Username:'}" HorizontalAlignment="Right" Margin="0,0,0,15"/>
-                <TextBlock Text="{Binding LoginPasswordLabel, FallbackValue='Password:'}" HorizontalAlignment="Right"/>
+                <TextBlock Text="{Binding LoginUsernameLabel, FallbackValue='Username:'}" Style="{StaticResource BaseTextBlockStyle}" HorizontalAlignment="Right" Margin="0,0,0,15"/>
+                <TextBlock Text="{Binding LoginPasswordLabel, FallbackValue='Password:'}" Style="{StaticResource BaseTextBlockStyle}" HorizontalAlignment="Right"/>
             </StackPanel>
 
             <StackPanel Grid.Column="1" Margin="12,0,25,0">
@@ -29,7 +29,7 @@
         </Grid>
 
         <StackPanel Margin="0,20,0,20">
-            <Button Content="{Binding LoginButtonText, FallbackValue='Login'}" HorizontalAlignment="Center" Margin="0,0,0,15" Command="{Binding LoginCommand}"/>
+            <Button Content="{Binding LoginButtonText, FallbackValue='Login'}" Style="{StaticResource StandardButton}" HorizontalAlignment="Center" Margin="0,0,0,15" Command="{Binding LoginCommand}"/>
             <Button Content="{Binding RegisterButtonText, FallbackValue='Register'}" HorizontalAlignment="Center" Margin="0,0,0,0" Command="{Binding NavigateToRegistrationCommand}"/>
         </StackPanel>
         
