--- a/CSC3045-CS2-Frontend/CSC3045-CS2/App.xaml
+++ b/CSC3045-CS2-Frontend/CSC3045-CS2/App.xaml
@@ -10,6 +10,8 @@
                 <ResourceDictionary Source="Resources/Styles/Colors.xaml" />
                 <ResourceDictionary Source="Resources/Styles/Fonts.xaml" />
                 <ResourceDictionary Source="Resources/Styles/Buttons.xaml" />
+                <ResourceDictionary Source="Resources/Styles/TextBoxes.xaml" />
+                <ResourceDictionary Source="Resources/Styles/Text.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
