--- a/CSC3045-CS2-Frontend/CSC3045-CS2/Pages/Login.xaml
+++ b/CSC3045-CS2-Frontend/CSC3045-CS2/Pages/Login.xaml
@@ -9,7 +9,7 @@
       Title="Login">
 
     <StackPanel>
-        <TextBlock Text="{Binding LoginTitle, FallbackValue='Login'}" HorizontalAlignment="Center" Margin="0,10,0,25"/>
+        <TextBlock Text="{Binding LoginTitle, FallbackValue='Login'}" Style="{StaticResource Title}" HorizontalAlignment="Center" Margin="0,10,0,25"/>
 
         <Grid>
             <Grid.ColumnDefinitions>
@@ -18,8 +18,8 @@
             </Grid.ColumnDefinitions>
 
             <StackPanel Grid.Column="0" Margin="0,0,12,0">
-                <TextBlock Text="{Binding LoginUsernameLabel, FallbackValue='Username:'}" Style="{StaticResource BaseTextBlockStyle}" HorizontalAlignment="Right" Margin="0,0,0,15"/>
-                <TextBlock Text="{Binding LoginPasswordLabel, FallbackValue='Password:'}" Style="{StaticResource BaseTextBlockStyle}" HorizontalAlignment="Right"/>
+                <TextBlock Text="{Binding LoginUsernameLabel, FallbackValue='Username:'}" Style="{StaticResource Label}" HorizontalAlignment="Right" Margin="0,0,0,15"/>
+                <TextBlock Text="{Binding LoginPasswordLabel, FallbackValue='Password:'}" Style="{StaticResource Label}" HorizontalAlignment="Right"/>
             </StackPanel>
 
             <StackPanel Grid.Column="1" Margin="12,0,25,0">
@@ -30,7 +30,7 @@
 
         <StackPanel Margin="0,20,0,20">
             <Button Content="{Binding LoginButtonText, FallbackValue='Login'}" Style="{StaticResource StandardButton}" HorizontalAlignment="Center" Margin="0,0,0,15" Command="{Binding LoginCommand}"/>
-            <Button Content="{Binding RegisterButtonText, FallbackValue='Register'}" HorizontalAlignment="Center" Margin="0,0,0,0" Command="{Binding NavigateToRegistrationCommand}"/>
+            <Button Content="{Binding RegisterButtonText, FallbackValue='Register'}" Style="{StaticResource StandardButton}" HorizontalAlignment="Center" Margin="0,0,0,0" Command="{Binding NavigateToRegistrationCommand}"/>
         </StackPanel>
         
     </StackPanel>
