--- a/CSC3045-CS2-Frontend/CSC3045-CS2/Pages/Register.xaml
+++ b/CSC3045-CS2-Frontend/CSC3045-CS2/Pages/Register.xaml
@@ -9,37 +9,37 @@
       Title="Register">
 
     <StackPanel>
-        <TextBlock Text="Registration" HorizontalAlignment="Center" FontWeight="Bold" FontSize="20" Margin="0,10,0,10"/>
+        <TextBlock Text="Registration" Style="{StaticResource Title}" HorizontalAlignment="Center" Margin="0,10,0,10"/>
         <Grid>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
             <StackPanel Grid.Column="0" Margin="20,0,0,0" HorizontalAlignment="Center" >
-                <TextBlock Text="Username" Grid.Column="0" FontSize="14" />
-                <TextBlock Text="First name" Grid.Column="0" FontSize="14" Margin="0,10,0,0"/>
-                <TextBlock Text="Surname" Grid.Column="0" FontSize="14" Margin="0,10,0,0"/>
-                <TextBlock Text="Email" Grid.Column="0" FontSize="14" Margin="0,10,0,0"/>
-                <TextBlock Text="Password" Grid.Column="0" FontSize="14" Margin="0,10,0,0"/>
-                <TextBlock Text="Confirm Password" Grid.Column="0" FontSize="14" Margin="0,10,0,0"/>
-                <TextBlock Text="Role" Grid.Column="0" FontSize="14" Margin="0,10,0,0"/>
+                <TextBlock Text="Username" Style="{StaticResource Label}" Grid.Column="0"/>
+                <TextBlock Text="First name" Style="{StaticResource Label}" Grid.Column="0" Margin="0,10,0,0"/>
+                <TextBlock Text="Surname" Style="{StaticResource Label}" Grid.Column="0" Margin="0,10,0,0"/>
+                <TextBlock Text="Email" Style="{StaticResource Label}" Grid.Column="0" Margin="0,10,0,0"/>
+                <TextBlock Text="Password" Style="{StaticResource Label}" Grid.Column="0" Margin="0,10,0,0"/>
+                <TextBlock Text="Confirm Password" Style="{StaticResource Label}" Grid.Column="0" Margin="0,10,0,0"/>
+                <TextBlock Text="Role" Style="{StaticResource Label}" Grid.Column="0" Margin="0,10,0,0"/>
             </StackPanel>
             <StackPanel Grid.Column="1" Margin="10,0,10,0">
-                <TextBox Name="UsernameTextBox" />
-                <TextBox Name ="FirstnameTextBox" Margin="0,10,0,0"/>
-                <TextBox Name ="SurnameTextBox" Margin="0,10,0,0"/>
-                <TextBox Name ="EmailTextBox" Margin="0,10,0,0"/>
-                <PasswordBox Name="PasswordTextBox"  Margin="0,10,0,0" />
+                <TextBox Name="UsernameTextBox"/>
+                <TextBox Name="FirstnameTextBox" Margin="0,10,0,0"/>
+                <TextBox Name="SurnameTextBox" Margin="0,10,0,0"/>
+                <TextBox Name="EmailTextBox" Margin="0,10,0,0"/>
+                <PasswordBox Name="PasswordTextBox" Margin="0,10,0,0" />
                 <PasswordBox Name="ConfirmPasswordTextBox" Margin="0,10,0,0" ToolTip="Passwords Must Match"/>
 
                 <Grid Margin="0,10">
                     <Grid.ColumnDefinitions>
-                        <ColumnDefinition></ColumnDefinition>
-                        <ColumnDefinition></ColumnDefinition>
+                        <ColumnDefinition/>
+                        <ColumnDefinition/>
                     </Grid.ColumnDefinitions>
                     <Grid.RowDefinitions>
-                        <RowDefinition></RowDefinition>
-                        <RowDefinition></RowDefinition>
+                        <RowDefinition/>
+                        <RowDefinition/>
                     </Grid.RowDefinitions>
 
                     <CheckBox Name="ProductOwnerCheckBox" Grid.Column="0" Grid.Row="0" Margin="0,5" HorizontalAlignment="Left">Product Owner</CheckBox>
@@ -54,8 +54,8 @@
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
-            <Button Name="BackButton" Margin="10,10,10,10" Grid.Column="0" Background="Red"  Content="Back" Command="{Binding BackCommand}"/>
-            <Button Name="RegisterButton" Margin="10,10,10,10" Grid.Column="1" Background="Green" Content="Register" Click="RegisterButton_Click"/>
+            <Button Name="BackButton" Style="{StaticResource StandardButton}" Margin="10,10,10,10" Grid.Column="0" Content="Back" Command="{Binding BackCommand}"/>
+            <Button Name="RegisterButton" Style="{StaticResource StandardButton}" Margin="10,10,10,10" Grid.Column="1" Content="Register" Click="RegisterButton_Click"/>
         </Grid>
     </StackPanel>
 
