--- a/CSC3045-CS2-Frontend/CSC3045-CS2/Resources/Styles/Buttons.xaml
+++ b/CSC3045-CS2-Frontend/CSC3045-CS2/Resources/Styles/Buttons.xaml
@@ -2,21 +2,16 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:local="clr-namespace:CSC3045_CS2.Resources.Styles">
 
-    <ResourceDictionary.MergedDictionaries>
-        <!-- Order is Important -->
-        <ResourceDictionary Source="Colors.xaml"/>
-        <ResourceDictionary Source="Fonts.xaml"/>
-    </ResourceDictionary.MergedDictionaries>
-
     <Style TargetType="{x:Type Button}" x:Key="StandardButton">
-        <Setter Property="Background" Value="{StaticResource ButtonBackgroundBrush}"/>
-        <Setter Property="BorderThickness" Value="0"/>
-        <Setter Property="Padding" Value="8"/>
+        <Setter Property="Background" Value="{StaticResource LightBlueBrush}"/>
+        <Setter Property="BorderBrush" Value="{StaticResource LightGrayBrush}"/> 
+        <Setter Property="Height" Value="35"/>
+        <Setter Property="Width" Value="75"/>
 
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type Button}">
-                    <Border Padding="{TemplateBinding Padding}" Background="{TemplateBinding Background}">
+                    <Border CornerRadius="15" BorderThickness="2" Background="{TemplateBinding Background}" BorderBrush="{TemplateBinding BorderBrush}">
                         <ContentPresenter VerticalAlignment="Center" HorizontalAlignment="Center" />
                     </Border>
                 </ControlTemplate>
@@ -25,7 +20,8 @@
 
         <Style.Triggers>
             <Trigger Property="IsMouseOver" Value="True">
-                <Setter Property="Background" Value="{StaticResource ButtonHoverBrush}" />
+                <Setter Property="Background" Value="{StaticResource DarkBlueBrush}"/>
+                <Setter Property="BorderBrush" Value="{StaticResource DarkGrayBrush}"/>
             </Trigger>
         </Style.Triggers>
     </Style>
