--- a/CSC3045-CS2-Frontend/CSC3045-CS2/Pages/Register.xaml
+++ b/CSC3045-CS2-Frontend/CSC3045-CS2/Pages/Register.xaml
@@ -9,7 +9,7 @@
       Title="Register">
 
     <StackPanel>
-        <TextBlock Text="Registration" HorizontalAlignment="Center" FontWeight="Bold" FontSize="20" Margin="0,10,0,10"/>
+        <Label Name="PageTitle" Content="Registration" HorizontalAlignment="Center" FontWeight="Bold" FontSize="20" Margin="0,10,0,10"/>
         <Grid>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
