--- a/CSC3045-CS2-Frontend/CSC3045-CS2/Pages/UserDashboard.xaml
+++ b/CSC3045-CS2-Frontend/CSC3045-CS2/Pages/UserDashboard.xaml
@@ -9,7 +9,7 @@
 
     <StackPanel>
         <StackPanel>
-            <TextBlock Text="User Dashboard" FontSize="20" HorizontalAlignment="Center" VerticalAlignment="Center"></TextBlock>
+            <TextBlock Name="PageTitle" Text="User Dashboard" FontSize="20" HorizontalAlignment="Center" VerticalAlignment="Center"></TextBlock>
         </StackPanel>
 
         <StackPanel Background="CadetBlue">
@@ -36,8 +36,8 @@
         </ScrollViewer>
 
         <StackPanel>
-            <Button Content="{Binding CreateProjectButtonLabel, FallbackValue='Create Project'}" HorizontalAlignment="Center" Command="{Binding NavigateToCreateProjectCommand}"/>
-            <Button Content="{Binding LogoutButtonLabel, FallbackValue='Logout'}" HorizontalAlignment="Left" Command="{Binding LogoutCommand}"/>
+            <Button Name="CreateProjectButton" Content="Create Project" HorizontalAlignment="Center" Command="{Binding NavigateToCreateProjectCommand}"/>
+            <Button Name="LogoutButton" Content="Logout" HorizontalAlignment="Left" Command="{Binding LogoutCommand}"/>
         </StackPanel>
     </StackPanel>
 </Page>
